Closed Bug 696807 Opened 13 years ago Closed 12 years ago

sftkdb_DeleteSecmodDB and sftkdb_AddSecmodDB should set error code if dbname is NULL or rw is false.

Categories

(NSS :: Libraries, defect, P2)

3.13

Tracking

(Not tracked)

RESOLVED FIXED
3.13.3

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(2 files)

Attached patch Proposed patchSplinter Review
The proposed patch makes the change Bob suggested in bug 641052 comment 7 and
bug 641052 comment 10.

If dbname is NULL or rw is false, sftkdb_DeleteSecmodDB and sftkdb_AddSecmodDB
returns SECFailure without setting an error code.  The patch fixes that.
Attachment #569106 - Flags: review?(rrelyea)
Target Milestone: 3.13.1 → 3.13.2
Comment on attachment 569106 [details] [diff] [review]
Proposed patch

r+ rrelyea
Attachment #569106 - Flags: review?(rrelyea) → review+
Patch checked in on the NSS trunk (NSS 3.13.3).

Checking in sftkmod.c;
/cvsroot/mozilla/security/nss/lib/softoken/sftkmod.c,v  <--  sftkmod.c
new revision: 1.10; previous revision: 1.9
done
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: 3.13.2 → 3.13.3
I must have created the previous patch without even compiling
it.  Sorry.

Patch checked in on the NSS trunk (NSS 3.13.3).

Checking in sftkmod.c;
/cvsroot/mozilla/security/nss/lib/softoken/sftkmod.c,v  <--  sftkmod.c
new revision: 1.11; previous revision: 1.10
done
Attachment #598391 - Flags: review?(rrelyea)
Comment on attachment 598391 [details] [diff] [review]
Need to include "secerr.h"

r+ though I presume this is already checked in;).

bob
Attachment #598391 - Flags: review?(rrelyea) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: