Bug 696807 - sftkdb_DeleteSecmodDB and sftkdb_AddSecmodDB should set error code if dbname is NULL or rw is false.  r=rrelyea.