security/nss/lib/softoken/sftkmod.c
@@ -562,6 +562,7 @@ sftkdb_DeleteSecmodDB(SDBType dbType, const char *appName,
     PRBool found = PR_FALSE;
 
     if (dbname == NULL) {
+	PORT_SetError(SEC_ERROR_INVALID_ARGS);
 	return SECFailure;
     }
 
@@ -570,6 +571,7 @@ sftkdb_DeleteSecmodDB(SDBType dbType, const char *appName,
     }
 
     if (!rw) {
+	PORT_SetError(SEC_ERROR_READ_ONLY);
 	return SECFailure;
     }
 
@@ -689,6 +691,7 @@ sftkdb_AddSecmodDB(SDBType dbType, const char *appName,
     PRBool libFound = PR_FALSE;
 
     if (dbname == NULL) {
+	PORT_SetError(SEC_ERROR_INVALID_ARGS);
 	return SECFailure;
     }
 
@@ -698,6 +701,7 @@ sftkdb_AddSecmodDB(SDBType dbType, const char *appName,
 
     /* can't write to a read only module */
     if (!rw) {
+	PORT_SetError(SEC_ERROR_READ_ONLY);
 	return SECFailure;
     }
 
